--- a/SASS TEST.html
+++ b/SASS TEST.html
@@ -28,6 +28,9 @@
         />
       </svg>
     </button>
+    <div class="bg-dark p-3 w-25">
+      <button class="btn-custom4">Following</button>
+    </div>
     <section class="mt-5 mb-5 border border-5 p-4 w-25">
       <h1>Extra font sizes:</h1>
       <p class="mt-4 fs-7">fs-7</p>
