aggiunti font custom con classi personalizzate

--- a/SASS TEST.html
+++ b/SASS TEST.html
@@ -60,5 +60,100 @@
     </section>
 
     <p class="fs-0">fs-0 (80px)</p>
+
+    <h2 class="mt-5">Custom Fonts</h2>
+    <section class="border border-4 p-3 w-50">
+      <div>
+        <h3>Normal</h3>
+        <h5 class="mt-1 mb-3">font-1</h5>
+        <p class="font-1 border-bottom border-black">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur
+          officia laudantium quibusdam tempore blanditiis quos aliquid in
+          laborum illum qui quisquam, nihil, consequuntur facere amet explicabo
+          accusantium dolores. Hic, maxime?
+        </p>
+
+        <h3>Italic</h3>
+        <h5 class="mt-1 mb-3">font-2</h5>
+        <p class="font-2 border-bottom border-black">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur
+          officia laudantium quibusdam tempore blanditiis quos aliquid in
+          laborum illum qui quisquam, nihil, consequuntur facere amet explicabo
+          accusantium dolores. Hic, maxime?
+        </p>
+
+        <h3>Bold</h3>
+        <h5 class="mt-1 mb-3">font-3</h5>
+        <p class="font-3 border-bottom border-black">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur
+          officia laudantium quibusdam tempore blanditiis quos aliquid in
+          laborum illum qui quisquam, nihil, consequuntur facere amet explicabo
+          accusantium dolores. Hic, maxime?
+        </p>
+
+        <h3>Bold Italic</h3>
+        <h5 class="mt-1 mb-3">font-4</h5>
+        <p class="font-4 border-bottom border-black">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur
+          officia laudantium quibusdam tempore blanditiis quos aliquid in
+          laborum illum qui quisquam, nihil, consequuntur facere amet explicabo
+          accusantium dolores. Hic, maxime?
+        </p>
+
+        <h3>Book Regular</h3>
+        <h5 class="mt-1 mb-3">font-5</h5>
+        <p class="font-5 border-bottom border-black">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur
+          officia laudantium quibusdam tempore blanditiis quos aliquid in
+          laborum illum qui quisquam, nihil, consequuntur facere amet explicabo
+          accusantium dolores. Hic, maxime?
+        </p>
+
+        <h3>Book Italic</h3>
+        <h5 class="mt-1 mb-3">font-6</h5>
+        <p class="font-6 border-bottom border-black">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur
+          officia laudantium quibusdam tempore blanditiis quos aliquid in
+          laborum illum qui quisquam, nihil, consequuntur facere amet explicabo
+          accusantium dolores. Hic, maxime?
+        </p>
+
+        <h3>Light</h3>
+        <h5 class="mt-1 mb-3">font-7</h5>
+        <p class="font-7 border-bottom border-black">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur
+          officia laudantium quibusdam tempore blanditiis quos aliquid in
+          laborum illum qui quisquam, nihil, consequuntur facere amet explicabo
+          accusantium dolores. Hic, maxime?
+        </p>
+
+        <h3>Light Italic</h3>
+        <h5 class="mt-1 mb-3">font-8</h5>
+        <p class="font-8 border-bottom border-black">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur
+          officia laudantium quibusdam tempore blanditiis quos aliquid in
+          laborum illum qui quisquam, nihil, consequuntur facere amet explicabo
+          accusantium dolores. Hic, maxime?
+        </p>
+
+        <h3>Medium</h3>
+        <h5 class="mt-1 mb-3">font-9</h5>
+        <p class="font-9 border-bottom border-black">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur
+          officia laudantium quibusdam tempore blanditiis quos aliquid in
+          laborum illum qui quisquam, nihil, consequuntur facere amet explicabo
+          accusantium dolores. Hic, maxime?
+        </p>
+
+        <h3>Medium Italic</h3>
+        <h5 class="mt-1 mb-3">font-10</h5>
+        <p class="font-10 border-bottom border-black">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur
+          officia laudantium quibusdam tempore blanditiis quos aliquid in
+          laborum illum qui quisquam, nihil, consequuntur facere amet explicabo
+          accusantium dolores. Hic, maxime?
+        </p>
+      </div>
+    </section>
   </body>
 </html>
