--- a/SASS TEST.html
+++ b/SASS TEST.html
@@ -30,6 +30,20 @@
     </button>
     <div class="bg-dark p-3 w-25">
       <button class="btn-custom4">Following</button>
+      <button class="btn-custom5">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="25"
+          height="25"
+          fill="currentColor"
+          class="bi bi-play-fill"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393"
+          />
+        </svg>
+      </button>
     </div>
     <section class="mt-5 mb-5 border border-5 p-4 w-25">
       <h1>Extra font sizes:</h1>
