--- a/home.html
+++ b/home.html
@@ -242,8 +242,8 @@
         <article
           class="col-md-7 col-lg-7 min-vh-100 bg-dark p-4 d-flex flex-column"
         >
-          <h4 class="text-white my-4">Album che potrebbero piacerti</h4>
-          <div class="d-flex flex-wrap" id="album-home">
+          <h4 class="text-white my-4 col-12">Album che potrebbero piacerti</h4>
+          <div class="d-flex flex-wrap col-12" id="album-home">
             <!-- <div id="album-card" class="card border-0 p-3">
               <img
                 src="https://cdn-images.dzcdn.net/images/cover/cf155cd476feac69dd36ee65422ab7e7/250x250-000000-80-0-0.jpg"
