--- a/home.html
+++ b/home.html
@@ -243,20 +243,24 @@
           class="col-md-7 col-lg-7 min-vh-100 bg-dark p-4 d-flex flex-column"
         >
           <h4 class="text-white my-4 col-12">Album che potrebbero piacerti</h4>
-          <div class="d-flex flex-wrap col-12" id="album-home">
-            <!-- <div id="album-card" class="card border-0 p-3">
-              <img
-                src="https://cdn-images.dzcdn.net/images/cover/cf155cd476feac69dd36ee65422ab7e7/250x250-000000-80-0-0.jpg"
-                class="card-img"
-                alt="album-cover"
-              />
-              <div class="card-body py-3 px-0">
-                <h5 class="card-title text-white">Hello World</h5>
-                <a href="#" class="text-secondary text-decoration-none fs-6"
-                  >Pinguini Tattici Nucleari</a
-                >
+          <div class="container">
+            <div class="row">
+              <div class="d-flex flex-wrap" id="album-home">
+                <!-- <div id="album-card" class="card border-0 p-3">
+                  <img
+                    src="https://cdn-images.dzcdn.net/images/cover/cf155cd476feac69dd36ee65422ab7e7/250x250-000000-80-0-0.jpg"
+                    class="card-img"
+                    alt="album-cover"
+                  />
+                  <div class="card-body py-3 px-0">
+                    <h5 class="card-title text-white">Hello World</h5>
+                    <a href="#" class="text-secondary text-decoration-none fs-6"
+                      >Pinguini Tattici Nucleari</a
+                    >
+                  </div>
+                </div> -->
               </div>
-            </div> -->
+            </div>
           </div>
         </article>
         <div
