--- a/album2.html
+++ b/album2.html
@@ -228,8 +228,38 @@
               <div class="d-flex justify-content-between">
                 <div class="col-6 col-md-6 mb-2 mb-md-0">
                   <div class="d-flex w-100">
-                    <button class="btn btn-secondary me-2">Bottone 1</button>
-                    <button class="btn btn-secondary">Bottone 2</button>
+                    <button
+                      class="btn btn-light me-2 bg-transparent border-0 text-light-emphasis"
+                    >
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="25"
+                        height="25"
+                        fill="currentColor"
+                        class="bi bi-arrow-left-circle-fill"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0m3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5z"
+                        />
+                      </svg>
+                    </button>
+                    <button
+                      class="btn me-2 bg-transparent border-0 text-light-emphasis"
+                    >
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="25"
+                        height="25"
+                        fill="currentColor"
+                        class="bi bi-arrow-right-circle-fill"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z"
+                        />
+                      </svg>
+                    </button>
                   </div>
                 </div>
                 <div class="col-6 col-md-6 text-md-end">
@@ -256,7 +286,7 @@
                     crossorigin="anonymous"
                   />
                 </div>
-                <div class="col-md-7 col-lg-8 px-3 px-lg-4">
+                <div class="col-md-7 col-lg-8 px-3 px-lg-4 py-3 py-md-0">
                   <div class="card-body d-flex flex-column">
                     <p class="text-white fs-10">ALBUM</p>
                     <h1
@@ -318,7 +348,7 @@
         </article>
         <!-- Chiusura dell'elemento article -->
         <div
-          class="col-md-2 col-lg-2 d-none d-sm-block bg-black text-white min-vh-100"
+          class="col-md-2 col-lg-2 d-none d-md-block bg-black text-white min-vh-100"
         >
           <div class="container">
             <div class="card">
