--- a/album2.html
+++ b/album2.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/assets/custom-bootstrap.css" />
+    <link rel="stylesheet" href="./album.css">
     <style>
       .custom-scroll {
         overflow-y: auto;
@@ -312,18 +313,20 @@
                       />
                     </svg>
                   </button>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="40"
-                    height="40"
-                    fill="currentColor"
-                    class="bi bi-heart p-2"
-                    viewBox="0 0 16 16"
-                  >
-                    <path
-                      d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"
-                    />
-                  </svg>
+                  <button class="invisible-button " id="heart-button">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="40"
+                      height="40"
+                      fill="currentColor"
+                      class="bi bi-heart p-2"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"
+                      />
+                    </svg>
+                  </button>
 
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -360,7 +363,7 @@
   class="bg-secondary text-light py-2 border-bottom border-light"
 >
   <div class="row align-items-center gx-0">
-    <div class="col-md-6 d-flex align-items-center">
+    <div class="col-md-6 d-flex align-items-center" id="title">
       <div class="d-flex align-items-center w-100">
         <p class="mb-0">Titoli</p>
       </div>
@@ -637,6 +640,7 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"
           ></script>
+          <script src="./heart.js"></script>
         </div>
       </div>
     </div>
