--- a/artist.html
+++ b/artist.html
@@ -4,12 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Spotify</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="/assets/custom-bootstrap.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
@@ -59,6 +54,7 @@
         .rotazione {
           transform: rotate(0deg);
           font-size: 40px;
+          margin-top: 14px;
         }
         .spostamento {
           transform: translate(16%, -62%);
@@ -103,7 +99,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link text-white">
+                <a href="/home.html" class="nav-link text-white">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
