--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link text-white">
+                <a href="/home.html" class="nav-link text-white">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
