--- a/album2.html
+++ b/album2.html
@@ -81,7 +81,7 @@
           />
         </svg>
         <!-- play button -->
-        <button class="btn-custom5 mb-2">
+        <button class="btn-custom5 mb-2" id="button-play-bar">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="25"
@@ -89,9 +89,23 @@
             fill="currentColor"
             class="bi bi-play-fill"
             viewBox="0 0 16 16"
+            id="button-play-bar-play"
           >
             <path
               d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393"
+            />
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="25"
+            height="25"
+            fill="currentColor"
+            class="bi bi-pause-fill d-none"
+            viewBox="0 0 16 16"
+            id="button-play-bar-paused"
+          >
+            <path
+              d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5m5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5"
             />
           </svg>
         </button>
@@ -434,6 +448,7 @@
                 <div class="col-6 col-md-6 mb-2 mb-md-0">
                   <div class="d-flex w-100">
                     <button
+                      onclick="history.back()"
                       class="btn btn-light me-2 bg-transparent border-0 text-light-emphasis"
                     >
                       <svg
@@ -450,6 +465,7 @@
                       </svg>
                     </button>
                     <button
+                      onclick="history.forward()"
                       class="btn me-2 bg-transparent border-0 text-light-emphasis"
                     >
                       <svg
